--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,6 @@ body {
     font-family: 'Poiret one', sans-serif, -apple-system, BlinkMacSystemFont;
     color: #ffffff;
     overflow: hidden;
-    // background: #2B2B2B;
     background: #202124;
 }
 
@@ -98,6 +97,7 @@ body {
     }
 
     .feature-info {
+        transition: 1000ms all;
         width: 25vw;
         position: absolute;
         right: 2em;
@@ -212,9 +212,4 @@ body {
             }
         }
     }
-}
-
-.swiper-container {
-    width: 100%;
-    height: 90%;
 }
